<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dialog"
    android:gravity="center_horizontal"
    android:padding="16dp"
    android:orientation="vertical">
    <ImageView
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:src="@drawable/games"/>
    <TextView
        android:layout_marginTop="16dp"
        android:text="@string/dialog"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

        <Button
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:id="@+id/btn_call"
            android:background="@color/AddContact"
            android:layout_height="wrap_content"
            android:textColor="@color/TextButton"
            android:text="@string/btn_call"/>
        <Button
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:id="@+id/btn_send_message"
            android:background="@color/TextButton"
            android:textColor="@color/AddContact"
            android:layout_height="wrap_content"
            android:text="@string/btn_SendMessage"/>


</LinearLayout>